# NutshellEngine-Editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  editor.py  main.cpp
assets/: options.ini  options.json
assets/base_project/: CMakeLists.txt
assets/base_project/Common/modules/: ntshengn_platform_module_interface.h
assets/base_project/assets/image_samplers/: default_cube_image_sampler.ntsp
assets/base_project/assets/models/: default_cube_model.ntmd
assets/base_project/scripts/: generate_script_manager.py  ntshengn_script_manager.h
assets/base_project/scripts/script_manager/: generate_script_manager.py  ntshengn_script_manager.cpp  ntshengn_script_manager.h
assets/global_resources/assets/images/: default_cube_texture.ntim
assets/global_resources/assets/materials/: cube_material.ntml  default_cube_material.ntml  plane_material.ntml
assets/global_resources/assets/meshes/: cube_mesh.ntmh  default_cube_mesh.ntmh  plane_mesh.ntmh
assets/global_resources/assets/models/: cube_model.ntmd  plane_model.ntmd
assets/global_resources/assets/scenes/: default_scene.ntsn
assets/global_resources/scripts/: CameraScript.h  GameControllerScript.h  camerascript.h
assets/languages/: en.json
src/common/: asset_helper.h  bounding_volumes.h  common.h  editor_parameters.cpp  editor_parameters.h  entity.h  global_info.h  localization.cpp  localization.h  logger.cpp  logger.h  save_title_changer.h  scene_manager.cpp  scene_manager.h  signal_emitter.h
src/common/components/: camera.h  collidable.h  component.h  light.h  renderable.h  rigidbody.h  scriptable.h  sound_listener.h  transform.h
src/renderer/: collider_mesh.cpp  collider_mesh.h  light_mesh.cpp  light_mesh.h  renderer.cpp  renderer.h  renderer_camera.h  renderer_mesh.h  renderer_model.h  renderer_resource_manager.cpp  renderer_resource_manager.h  renderer_resources.h
src/undo_commands/: add_entities_component_command.cpp  add_entities_component_command.h  add_entity_component_command.cpp  add_entity_component_command.h  change_entities_component_command.cpp  change_entities_component_command.h  change_entities_entity_groups_command.cpp  change_entities_entity_groups_command.h  change_entities_name_command.cpp  change_entities_name_command.h  change_entities_persistence_command.cpp  change_entities_persistence_command.h  change_entity_component_command.cpp  change_entity_component_command.h  change_entity_name_command.cpp  change_entity_name_command.h  change_entity_persistence_command.cpp  change_entity_persistence_command.h  clear_scene_command.cpp  clear_scene_command.h  copy_entities_command.cpp  copy_entities_command.h  copy_entity_command.cpp  copy_entity_command.h  create_entities_from_model_command.cpp  create_entities_from_model_command.h  create_entity_command.cpp  create_entity_command.h  destroy_entities_command.cpp  destroy_entities_command.h  destroy_entity_command.cpp  destroy_entity_command.h  open_scene_command.cpp  open_scene_command.h  remove_entities_component_command.cpp  remove_entities_component_command.h  remove_entity_component_command.cpp  remove_entity_component_command.h  select_asset_entities_command.cpp  select_asset_entities_command.h
src/widgets/: about_widget.cpp  about_widget.h  add_component_button.cpp  add_component_button.h  add_component_menu.cpp  add_component_menu.h  asset_info_list.cpp  asset_info_list.h  asset_info_name_widget.cpp  asset_info_name_widget.h  asset_info_panel.cpp  asset_info_panel.h  asset_info_scroll_area.cpp  asset_info_scroll_area.h  asset_line_edit.cpp  asset_line_edit.h  asset_list.cpp  asset_list.h  asset_list_item_delegate.cpp  asset_list_item_delegate.h  asset_list_menu.cpp  asset_list_menu.h  asset_panel.cpp  asset_panel.h  boolean_widget.cpp  boolean_widget.h  build_bar.cpp  build_bar.h  camera_component_widget.cpp  camera_component_widget.h  close_scene_widget.cpp  close_scene_widget.h  code_editor_widget.cpp  code_editor_widget.h  collapsable_widget.cpp  collapsable_widget.h  collidable_component_widget.cpp  collidable_component_widget.h  color_picker_widget.cpp  color_picker_widget.h  (+160 more)
